--- a/nextpage.css
+++ b/nextpage.css
@@ -40,7 +40,7 @@ h1 {
   margin-bottom: 20px;
   text-shadow: 2px 2px 10px rgba(255,255,255,0.2);
 }
-.login-form a.register {
+a {
   color: #fff; /* Change the text color to white */
   text-decoration: none; /* Remove the underline */
 }
